# simpsons-paradox-floods

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  Makefile  README.md  environment.yml  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
configs/: bhm.yaml  gp.yaml  rfe.yaml  stack.yaml
configs/data/: conus_unregulated.yaml
configs/model/: bhm_2tuple.yaml  bhm_4tuple.yaml
configs/prior/: weak.yaml
configs/sampler/: nuts_blackjax.yaml  nuts_pymc.yaml
data/: README.md
docs/: api.md  data.md  index.md  methodology.md  reproduce.md
examples/: quickstart.py
notebooks/: README.md
results/: README.md
scripts/: download_data.py  make_figures.py  run_bhm.py  run_gp.py  run_qrf_stack.py  run_rfe.py
scripts/slurm/: bhm.sbatch
src/floodbhm/: __init__.py
src/floodbhm/data/: __init__.py  daymet.py  gages_ii.py  isa.py  nwis.py
src/floodbhm/eval/: __init__.py  metrics.py  posterior_diagnostics.py  ppc.py
src/floodbhm/features/: __init__.py  grouping.py  peak_extraction.py  time_of_concentration.py
src/floodbhm/models/: __init__.py  bhm.py  gp.py  rfe.py  stacking.py
src/floodbhm/viz/: __init__.py  simpsons.py
tests/: conftest.py  test_grouping.py  test_import.py  test_metrics.py  test_time_of_concentration.py
